a proper der-input-stream implementation is needed, can't rely on the internal one (sun.security.util)